messenger/include/dna/dna_engine.h

/* ============================================================================
 * OPAQUE TYPES
 * ============================================================================ */

typedef struct dna_engine dna_engine_t;
typedef uint64_t dna_request_id_t;
/* ============================================================================
 * ASYNC CALLBACK TYPES
 * ============================================================================ */

/**
 * Generic completion callback (success/error only)
 * Error is 0 (DNA_OK) on success, negative on error
 */
typedef void (*dna_completion_cb)(
    dna_request_id_t request_id,
    int error,
    void *user_data
);
/**
 * Send tokens callback (returns tx hash on success)
 * Error is 0 (DNA_OK) on success, negative on error
 * tx_hash is NULL on error, valid string on success
 */
typedef void (*dna_send_tokens_cb)(
    dna_request_id_t request_id,
    int error,
    const char *tx_hash,
    void *user_data
);
/**
 * Messages callback
 */
typedef void (*dna_messages_cb)(
    dna_request_id_t request_id,
    int error,
    dna_message_t *messages,
    int count,
    void *user_data
);
/**
 * Groups callback
 */
typedef void (*dna_groups_cb)(
    dna_request_id_t request_id,
    int error,
    dna_group_t *groups,
    int count,
    void *user_data
);
/**
 * Group info callback (extended info with GEK version)
 */
typedef void (*dna_group_info_cb)(
    dna_request_id_t request_id,
    int error,
    dna_group_info_t *info,
    void *user_data
);
/**
 * Group members callback
 */
typedef void (*dna_group_members_cb)(
    dna_request_id_t request_id,
    int error,
    dna_group_member_t *members,
    int count,
    void *user_data
);
/**
 * Invitations callback
 */
typedef void (*dna_invitations_cb)(
    dna_request_id_t request_id,
    int error,
    dna_invitation_t *invitations,
    int count,
    void *user_data
);
/**
 * Wallets callback
 */
typedef void (*dna_wallets_cb)(
    dna_request_id_t request_id,
    int error,
    dna_wallet_t *wallets,
    int count,
    void *user_data
);
/**
 * Balances callback
 */
typedef void (*dna_balances_cb)(
    dna_request_id_t request_id,
    int error,
    dna_balance_t *balances,
    int count,
    void *user_data
);
/**
 * Get unread message count for a contact (synchronous)
 *
 * Returns number of unread incoming messages from the specified contact.
 *
 * @param engine              Engine instance
 * @param contact_fingerprint Contact fingerprint
 * @return                    Unread count (>=0), or -1 on error
 */
DNA_API int dna_engine_get_unread_count(
    dna_engine_t *engine,
    const char *contact_fingerprint
);
/**
 * Mark all messages from contact as read
 *
 * Call when user opens conversation to clear unread badge.
 *
 * @param engine              Engine instance
 * @param contact_fingerprint Contact fingerprint
 * @param callback            Called on completion
 * @param user_data           User data for callback
 * @return                    Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_mark_conversation_read(
    dna_engine_t *engine,
    const char *contact_fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Retry all pending/failed messages
 *
 * Queries local database for messages with status PENDING(0) or FAILED(3)
 * and attempts to re-queue them to DHT. Called automatically on:
 * - Identity load (app startup)
 * - DHT reconnect (network change)
 *
 * Messages that exceed max_retries (10) are skipped and remain as FAILED.
 *
 * @param engine     Engine instance
 * @return           Number of messages successfully retried, or -1 on error
 */
DNA_API int dna_engine_retry_pending_messages(dna_engine_t *engine);
/**
 * Retry a single failed message by ID
 *
 * Attempts to re-send a specific message. Use this for manual retry
 * (e.g., user taps retry button on failed message).
 *
 * @param engine     Engine instance
 * @param message_id Message ID from local database
 * @return           0 on success, -1 on error (not found or not retryable)
 */
DNA_API int dna_engine_retry_message(dna_engine_t *engine, int message_id);
/* ============================================================================
 * 5. GROUPS (6 async functions)
 * ============================================================================ */

/**
 * Get groups current identity belongs to
 *
 * @param engine    Engine instance
 * @param callback  Called with groups array
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_groups(
    dna_engine_t *engine,
    dna_groups_cb callback,
    void *user_data
);
/**
 * Get extended group info (includes GEK version)
 *
 * @param engine     Engine instance
 * @param group_uuid Group UUID
 * @param callback   Called with group info
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_group_info(
    dna_engine_t *engine,
    const char *group_uuid,
    dna_group_info_cb callback,
    void *user_data
);
/**
 * Get group members
 *
 * @param engine     Engine instance
 * @param group_uuid Group UUID
 * @param callback   Called with members array
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_group_members(
    dna_engine_t *engine,
    const char *group_uuid,
    dna_group_members_cb callback,
    void *user_data
);
/**
 * Send message to group
 *
 * Encrypts with GEK (AES-256-GCM), signs with Dilithium5.
 *
 * @param engine     Engine instance
 * @param group_uuid Group UUID
 * @param message    Message text
 * @param callback   Called on completion
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_send_group_message(
    dna_engine_t *engine,
    const char *group_uuid,
    const char *message,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Get group conversation messages
 *
 * Retrieves all messages from a group, decrypted with GEK.
 * Messages are returned in chronological order (oldest first).
 *
 * @param engine      Engine instance
 * @param group_uuid  Group UUID
 * @param callback    Called with messages array
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_group_conversation(
    dna_engine_t *engine,
    const char *group_uuid,
    dna_messages_cb callback,
    void *user_data
);
/**
 * Add member to group
 *
 * Adds member to group in DHT, rotates GEK, sends invitation.
 * Only group owner can add members.
 *
 * @param engine      Engine instance
 * @param group_uuid  Group UUID
 * @param fingerprint Member fingerprint to add
 * @param callback    Called on completion
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_add_group_member(
    dna_engine_t *engine,
    const char *group_uuid,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Remove member from group
 *
 * Removes member from group in DHT and rotates GEK for forward secrecy.
 * Only group owner can remove members.
 *
 * @param engine      Engine instance
 * @param group_uuid  Group UUID
 * @param fingerprint Member fingerprint to remove
 * @param callback    Called on completion
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_remove_group_member(
    dna_engine_t *engine,
    const char *group_uuid,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Get pending group invitations
 *
 * @param engine    Engine instance
 * @param callback  Called with invitations array
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_invitations(
    dna_engine_t *engine,
    dna_invitations_cb callback,
    void *user_data
);
/**
 * Accept group invitation
 *
 * @param engine     Engine instance
 * @param group_uuid Group UUID
 * @param callback   Called on completion
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_accept_invitation(
    dna_engine_t *engine,
    const char *group_uuid,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Reject group invitation
 *
 * @param engine     Engine instance
 * @param group_uuid Group UUID
 * @param callback   Called on completion
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_reject_invitation(
    dna_engine_t *engine,
    const char *group_uuid,
    dna_completion_cb callback,
    void *user_data
);
/* ============================================================================
 * 6. WALLET (4 async functions) - Cellframe /opt/cellframe-node
 * ============================================================================ */

/**
 * List Cellframe wallets
 *
 * Scans /opt/cellframe-node/var/lib/wallet for .dwallet files.
 *
 * @param engine    Engine instance
 * @param callback  Called with wallets array
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_list_wallets(
    dna_engine_t *engine,
    dna_wallets_cb callback,
    void *user_data
);
/**
 * Get token balances for wallet
 *
 * Queries Cellframe RPC for balance info.
 *
 * @param engine       Engine instance
 * @param wallet_index Index from list_wallets result
 * @param callback     Called with balances array
 * @param user_data    User data for callback
 * @return             Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_balances(
    dna_engine_t *engine,
    int wallet_index,
    dna_balances_cb callback,
    void *user_data
);
/**
 * Get cached balances from SQLite (instant, no network calls)
 * Returns previously fetched balances from local cache.
 * Use for stale-while-revalidate: show cached data instantly,
 * then call dna_engine_get_balances() for live update.
 * Returns empty (count=0) if no cache exists yet.
 */
DNA_API dna_request_id_t dna_engine_get_cached_balances(
    dna_engine_t *engine,
    int wallet_index,
    dna_balances_cb callback,
    void *user_data
);
/**
 * Gas estimate result
 */
typedef struct {
    char fee_eth[32];       /* Fee in ETH (e.g., "0.000042") */
    uint64_t gas_price;     /* Gas price in wei */
    uint64_t gas_limit;     /* Gas limit (21000 for ETH transfer) */
} dna_gas_estimate_t;
/**
 * Gas estimates callback (all 3 speeds from single RPC call)
 * Error is 0 (DNA_OK) on success, negative on error
 * estimates is NULL on error
 */
typedef void (*dna_gas_estimates_cb)(
    dna_request_id_t request_id,
    int error,
    const dna_gas_estimates_t *estimates,
    void *user_data
);
/**
 * Get gas fee estimate for ETH transaction (DEPRECATED - use dna_engine_estimate_gas_async)
 *
 * Synchronous call - queries current network gas price.
 *
 * @param gas_speed     Gas speed preset (0=slow, 1=normal, 2=fast)
 * @param estimate_out  Output: gas estimate
 * @return              0 on success, -1 on error
 */
DNA_API int dna_engine_estimate_eth_gas(int gas_speed, dna_gas_estimate_t *estimate_out);
/**
 * Estimate ETH gas fees asynchronously (all 3 speeds in one RPC call)
 *
 * @param engine       Engine instance
 * @param callback     Called on completion with all 3 gas estimates
 * @param user_data    User data for callback
 * @return             Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_estimate_gas_async(
    dna_engine_t *engine,
    dna_gas_estimates_cb callback,
    void *user_data
);
/**
 * Send tokens
 *
 * Builds transaction, signs with Dilithium, submits via RPC.
 *
 * @param engine            Engine instance
 * @param wallet_index      Source wallet index
 * @param recipient_address Destination address
 * @param amount            Amount to send (string)
 * @param token             Token ticker (CPUNK, CELL, KEL, ETH)
 * @param network           Network name (Backbone, KelVPN, or empty for ETH)
 * @param gas_speed         Gas speed preset (ETH only, ignored for Cellframe)
 * @param callback          Called on completion with tx_hash
 * @param user_data         User data for callback
 * @return                  Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_send_tokens(
    dna_engine_t *engine,
    int wallet_index,
    const char *recipient_address,
    const char *amount,
    const char *token,
    const char *network,
    int gas_speed,
    dna_send_tokens_cb callback,
    void *user_data
);