messenger/dna_messenger_flutter/lib/ffi/dna_bindings.dart


  /// Retry all pending/failed messages
  /// Returns number of messages successfully retried, or -1 on error
  int dna_engine_retry_pending_messages(Pointer<dna_engine_t> engine) {
    return _dna_engine_retry_pending_messages(engine);
  }

  late final _dna_engine_retry_message = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Int32),
      int Function(Pointer<dna_engine_t>, int)>('dna_engine_retry_message');

  /// Retry a single failed message by ID
  /// Returns 0 on success, -1 on error
  int dna_engine_retry_message(
    Pointer<dna_engine_t> engine,
    int messageId,
  ) {
    return _dna_engine_retry_message(engine, messageId);
  }

  // ---------------------------------------------------------------------------
  // MESSAGE STATUS / READ RECEIPTS
  // ---------------------------------------------------------------------------

  late final _dna_engine_get_unread_count = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>)>('dna_engine_get_unread_count');

  /// Get unread message count for a specific contact (synchronous)
  int dna_engine_get_unread_count(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> contact_fingerprint,
  ) {
    return _dna_engine_get_unread_count(engine, contact_fingerprint);
  }

  late final _dna_engine_mark_conversation_read = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_mark_conversation_read');

  /// Mark all messages in conversation as read (async callback)
  int dna_engine_mark_conversation_read(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> contact_fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_mark_conversation_read(
        engine, contact_fingerprint, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // GROUPS
  // ---------------------------------------------------------------------------

  late final _dna_engine_get_groups = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaGroupsCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaGroupsCb>,
          Pointer<Void>)>('dna_engine_get_groups');

  int dna_engine_get_groups(
    Pointer<dna_engine_t> engine,
    Pointer<DnaGroupsCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_groups(engine, callback, user_data);
  }

  late final _dna_engine_get_group_info = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaGroupInfoCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaGroupInfoCb>, Pointer<Void>)>('dna_engine_get_group_info');

  int dna_engine_get_group_info(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<DnaGroupInfoCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_group_info(engine, group_uuid, callback, user_data);
  }

  late final _dna_engine_get_group_members = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaGroupMembersCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaGroupMembersCb>, Pointer<Void>)>('dna_engine_get_group_members');

  int dna_engine_get_group_members(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<DnaGroupMembersCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_group_members(engine, group_uuid, callback, user_data);
  }

  late final _dna_engine_send_group_message = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_send_group_message');

  int dna_engine_send_group_message(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<Utf8> message,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_send_group_message(
        engine, group_uuid, message, callback, user_data);
  }

  late final _dna_engine_get_group_conversation = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaMessagesCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaMessagesCb>, Pointer<Void>)>('dna_engine_get_group_conversation');

  int dna_engine_get_group_conversation(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<DnaMessagesCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_group_conversation(engine, group_uuid, callback, user_data);
  }

  late final _dna_engine_add_group_member = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_add_group_member');

  int dna_engine_add_group_member(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<Utf8> fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_add_group_member(
        engine, group_uuid, fingerprint, callback, user_data);
  }

  late final _dna_engine_remove_group_member = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_remove_group_member');

  int dna_engine_remove_group_member(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<Utf8> fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_remove_group_member(
        engine, group_uuid, fingerprint, callback, user_data);
  }

  late final _dna_engine_get_invitations = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaInvitationsCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaInvitationsCb>,
          Pointer<Void>)>('dna_engine_get_invitations');

  int dna_engine_get_invitations(
    Pointer<dna_engine_t> engine,
    Pointer<DnaInvitationsCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_invitations(engine, callback, user_data);
  }

  late final _dna_engine_accept_invitation = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_accept_invitation');

  int dna_engine_accept_invitation(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_accept_invitation(
        engine, group_uuid, callback, user_data);
  }

  late final _dna_engine_reject_invitation = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_reject_invitation');

  int dna_engine_reject_invitation(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_reject_invitation(
        engine, group_uuid, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // WALLET
  // ---------------------------------------------------------------------------

  late final _dna_engine_list_wallets = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaWalletsCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaWalletsCb>,
          Pointer<Void>)>('dna_engine_list_wallets');

  int dna_engine_list_wallets(
    Pointer<dna_engine_t> engine,
    Pointer<DnaWalletsCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_list_wallets(engine, callback, user_data);
  }

  late final _dna_engine_get_balances = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Int32, Pointer<DnaBalancesCb>,
          Pointer<Void>),
      int Function(Pointer<dna_engine_t>, int, Pointer<DnaBalancesCb>,
          Pointer<Void>)>('dna_engine_get_balances');

  int dna_engine_get_balances(
    Pointer<dna_engine_t> engine,
    int wallet_index,
    Pointer<DnaBalancesCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_balances(engine, wallet_index, callback, user_data);
  }

  late final _dna_engine_get_cached_balances = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Int32, Pointer<DnaBalancesCb>,
          Pointer<Void>),
      int Function(Pointer<dna_engine_t>, int, Pointer<DnaBalancesCb>,
          Pointer<Void>)>('dna_engine_get_cached_balances');

  int dna_engine_get_cached_balances(
    Pointer<dna_engine_t> engine,
    int wallet_index,
    Pointer<DnaBalancesCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_cached_balances(engine, wallet_index, callback, user_data);
  }

  late final _dna_engine_estimate_eth_gas = _lib.lookupFunction<
      Int32 Function(Int32, Pointer<dna_gas_estimate_t>),
      int Function(int, Pointer<dna_gas_estimate_t>)>('dna_engine_estimate_eth_gas');

  int dna_engine_estimate_eth_gas(
    int gas_speed,
    Pointer<dna_gas_estimate_t> estimate_out,
  ) {
    return _dna_engine_estimate_eth_gas(gas_speed, estimate_out);
  }

  late final _dna_engine_estimate_gas_async = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<DnaGasEstimatesCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaGasEstimatesCb>, Pointer<Void>)>('dna_engine_estimate_gas_async');

  int dna_engine_estimate_gas_async(
    Pointer<dna_engine_t> engine,
    Pointer<DnaGasEstimatesCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_estimate_gas_async(engine, callback, user_data);
  }

  late final _dna_engine_send_tokens = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>,
          Int32,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Int32,
          Pointer<DnaSendTokensCb>,
          Pointer<Void>),
      int Function(
          Pointer<dna_engine_t>,
          int,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Pointer<Utf8>,
          int,
          Pointer<DnaSendTokensCb>,
          Pointer<Void>)>('dna_engine_send_tokens');

  int dna_engine_send_tokens(
    Pointer<dna_engine_t> engine,
    int wallet_index,
    Pointer<Utf8> recipient_address,
    Pointer<Utf8> amount,
    Pointer<Utf8> token,
    Pointer<Utf8> network,
    int gas_speed,
    Pointer<DnaSendTokensCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_send_tokens(engine, wallet_index, recipient_address,
        amount, token, network, gas_speed, callback, user_data);
  }
